- Graphics: Reworked line drawing, the earlier adaption of upstream was not
  right. This new version is based on PiTubeDirect's implementation.
- Graphics: Dot patterns and VDU23,6 now implemented
- BASIC: PRINT and STR$ now support displaying a decimal comma instead of a
  point.
- BASIC: PRINT and STR$ now show exponents in the style used by the BBC and
  RISC OS, rather than the C standard.

* V1.22.12 - 05 December 2021
- System: Fix some floating-point data size mismatches
- System: Fix calculations of matrix dot products (thank you 
  mikefairbank@Github!)
- System: New RISC OS build process using GCCSDK under Linux (thank you
  Cameron Cawley!)
- Keyboard: Fixed keyboard from eating too much from event queue (thanks
  David Hawes!)
- Graphics: Implemented GCOL action codes 5-7
- Graphics: Hopefully fixed a triangle drawing bug.
- Graphics: Implement VDU23,16 (as far as already implemented) in VDU5 mode.
- Teletext: Implemented VDU23,18,4,pri,alt| to select character sets.
  This is much cleaner than using SAA505Xlib in the examples, but that will
  remain as an example for OSWORDs &8B and &8C.
- BASIC: Fix COLOUR(r,g,b) function to return correct values in 256-colour
  modes.
- BASIC: Fix behaviour of RND followed by a space before parentheses to match
  ARM and 6502 BBC BASIC.
- BASIC: Change the behaviour of cascaded IF calls to match the behaviour of
  BBCSDL and friends. This is switchable and can be switched back to Acorn's
  (strange) behaviour via a SYS call.
- INKEY(-256) now returns ASC("M") (&4D) on ALL platforms, including RISC OS.

* V1.22.11 - 11 July 2021
- System: Mouse position wasn't taking into account change of ORIGIN.
- System: Changes to dlopen, otherwise symbols weren't being recognised.
- System: SYS "Brandy_dlgetaddr" optionally takes a second parameter of a
  library handle returned by SYS "Brandy_dlopen".
- System: SYS now only operates in 64-bit mode on 64-bit hardware.